# electricitymarketreport

./: .gitlab-ci.yml  README.md  debug_ranges.py  pyproject.toml
.github/workflows/: report.yml
reports/test-run/: kpis.json  kpis.parquet  report.html
reports/test-run-2/: kpis.json  kpis.parquet  report.html
reports/test-run-3/: kpis.json  kpis.parquet  report.html
reports/test-run-4/: kpis.json  kpis.parquet  report.html
reports/test-run-5/: kpis.json  kpis.parquet  report.html
src/: exports.py  extract.py  models.py  report.py  run_pipeline.py  transform.py
src/electricitymarketreport.egg-info/: SOURCES.txt  requires.txt
tests/: test_extract.py  test_transform.py
tests/fixtures/: generation_series_4067.json  index_hour.json  price_series_4169.json
