[project]
name = "electricitymarketreport"
version = "0.1.0"
description = "Automated SMARD electricity market KPI reporting pipeline"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pydantic>=2.6",
    "pandas>=2.2",
    "pyarrow>=15.0",      # needed for pandas .to_parquet()
    "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "responses>=0.25",   # for mocking SMARD API calls in tests
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]